--- a/Weather/weatherApp/src/App.css
+++ b/Weather/weatherApp/src/App.css
@@ -9,7 +9,7 @@
 }
 
 @media screen and (max-width: 430px){
-    #card{
+    #card, #card2{
         width: 100%;
         height: 100%;
         background-size: cover;
